--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@angular/compiler": "~9.1.9",
     "@angular/core": "~9.1.9",
     "@angular/forms": "~9.1.9",
+    "@angular/http": "^7.2.16",
     "@angular/material": "^9.2.4",
     "@angular/platform-browser": "~9.1.9",
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
     "bootstrap": "^5.0.0-beta1",
+    "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
     "rxjs": "~6.5.4",
     "sweetalert": "^2.1.2",
